clusters/production/sonarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
  hostnames:
    - "sonarr.production.rpcu.lan"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sonarr-oauth2-proxy
          port: 80
